# clinical-SAAS

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENT_SPEC.md  AGENT_SPEC_PHASE2.md  README.md  brief.md  conciergeos-desktop-redesign.html  conciergeos-desktop-redesign.html.artifact.json  design-system-preview.html  desktop-shell.html  desktop-shell.html.artifact.json  eslint.config.mjs  index.html  index.html.artifact.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  ui-audit-de-ai-slop.md
apps/api/: Dockerfile  alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_patient_portal_access_code.py  003_user_access_review.py  004_patient_communication_consent.py  005_billing_claim_hardening.py  006_patient_document_review_routing.py  007_task_blocked_status.py  008_user_password_rotation.py  009_security_hardening.py  010_assistant_proposals.py  011_task_notification_acknowledgement.py
apps/api/app/: config.py  database.py  deps.py  main.py  minio_client.py  redis_client.py
apps/api/app/integrations/: __init__.py  auth0.py  availity.py  base.py  calendar.py  clearinghouse.py  communications.py  copilotkit.py  dosespot.py  ehr.py  erx.py  esignature.py  factory.py  fax_provider.py  fhir.py  google_calendar.py  identity.py  immunization_registry.py  intuit_payments.py  labcorp.py  labs_hie.py  payments.py  portal.py  public_health.py  pwa.py  quest.py  sandbox.py  srfax.py  telehealth.py  twilio.py
apps/api/app/middleware/: __init__.py  rate_limit.py
apps/api/app/models/: __init__.py  assistant_proposal.py  fax.py  (+16 more)
apps/api/tests/: conftest.py  test_config.py  test_integrations.py  test_readiness.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+285 files in other folders)
