[project]
name = "concierge-os-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic[email]>=2.10,<2.11",
    "pydantic-settings>=2.6,<2.7",
    "redis[hiredis]>=5.2,<5.3",
    "minio>=7.2,<7.3",
    "python-jose[cryptography]>=3.3,<3.4",
    "passlib[bcrypt]>=1.7,<1.8",
    "bcrypt>=3.2,<4.0",
    "httpx>=0.28,<0.29",
    "python-multipart>=0.0.12,<0.1",
    "aiosqlite>=0.20,<0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.28,<0.29",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<1.14",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
