[package]
name = "concierge-os-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "concierge_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
